[package]
name = "tui-europeancorrespondent"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = "0.25"
crossterm = "0.28"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
unicode-width = "0.2"
graphql_client = { version = "0.14", features = ["reqwest"] }
